--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 set -sg escape-time 0
 set -g prefix C-q
-set -g default-terminal "screen-256color" 
+set -g default-terminal "xterm" 
 source-file "${HOME}/.tmux/themes/default.tmux"
 
 set-window-option -g mode-keys vi
