Add mappings to split windows in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,3 +8,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind \ split-window -h
+bind - split-window
