--- a/tmux.conf
+++ b/tmux.conf
@@ -10,3 +10,8 @@ bind k select-pane -U
 bind l select-pane -R
 bind \ split-window -h
 bind - split-window
+
+# Vi copypaste mode
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
