Add proper vim keymapping to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,10 +3,38 @@ set -g prefix C-q
 set -g default-terminal "xterm" 
 source-file "${HOME}/.tmux/themes/default.tmux"
 
-set-window-option -g mode-keys vi
+# -----------------------------------------------------------------------------
+# Turn on Vim mode for movement
+# -----------------------------------------------------------------------------
+setw -g mode-keys vi
+
+# -----------------------------------------------------------------------------
+# Vim visual selection and yank when in copy mode
+# -----------------------------------------------------------------------------
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+bind -t vi-copy Escape cancel
+
+# -----------------------------------------------------------------------------
+# Now back in Vim we can paste our yanked selection anywhere we are in insert
+# mode with (prefix p). This works in the vim buffer as well as search and 
+# fuzzy finder buffer for example
+# -----------------------------------------------------------------------------
+bind p paste-buffer
+
+# -----------------------------------------------------------------------------
+# Move to the pane in the desired direction with prefix [h|j|k|l]. This doesn't
+# override the prefix o command
+# -----------------------------------------------------------------------------
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# -----------------------------------------------------------------------------
+# Easier for my brain to remember to split the pane with - and \ 
+# which resemble a horizontal and vertical split respectively
+# doesn't override default prefix " and prefix &
+# -----------------------------------------------------------------------------
 bind \ split-window -h
 bind - split-window
