--- a/tmux.conf
+++ b/tmux.conf
@@ -5,26 +5,27 @@ source-file "${HOME}/.tmux/themes/default.tmux"
 
 # -----------------------------------------------------------------------------
 # Turn on Vim mode for movement
+# Also allows easy upwards searching 
 # -----------------------------------------------------------------------------
 setw -g mode-keys vi
 
 # -----------------------------------------------------------------------------
-# Vim visual selection and yank when in copy mode
+# Vim visual selection and yank when in copy mode (prefix [)
 # -----------------------------------------------------------------------------
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind -t vi-copy Escape cancel
 
 # -----------------------------------------------------------------------------
-# Now back in Vim we can paste our yanked selection anywhere we are in insert
-# mode with (prefix p). This works in the vim buffer as well as search and 
-# fuzzy finder buffer for example
+# After we have something yanked back in Vim we can paste our yanked selection 
+# anywhere we are in insert mode with (prefix p). This works in the vim buffer,
+# search and fuzzy finder buffer for example
 # -----------------------------------------------------------------------------
 bind p paste-buffer
 
 # -----------------------------------------------------------------------------
-# Move to the pane in the desired direction with prefix [h|j|k|l]. This doesn't
-# override the prefix o command
+# Move to the pane in the desired direction with (prefix [h|j|k|l]). This 
+# doesn't override the (prefix o) command
 # -----------------------------------------------------------------------------
 bind h select-pane -L
 bind j select-pane -D
@@ -34,7 +35,7 @@ bind l select-pane -R
 # -----------------------------------------------------------------------------
 # Easier for my brain to remember to split the pane with - and \ 
 # which resemble a horizontal and vertical split respectively
-# doesn't override default prefix " and prefix &
+# doesn't override default (prefix ") and (prefix &)
 # -----------------------------------------------------------------------------
 bind \ split-window -h
 bind - split-window
