Tech Debt: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
 # Ignore all the files and folders in the bundle directory
 Linux/vim/bundle/
-Linux/vim/bundle/L9/*
-Linux/vim/bundle/AutoComplPop/*
-Linux/vim/bundle/bash-support.vim/*
-Linux/vim/bundle/vim-buffer-explorer-plugin/*
-Linux/vim/bundle/delimitMate/*
-Linux/vim/bundle/supertab/*
-Linux/vim/bundle/syntastic/*
-Linux/vim/bundle/tagbar/*
-Linux/vim/bundle/vim-fugitive/*
-Linux/vim/bundle/vim-javascript/*
-Linux/vim/bundle/vundle/*
+Mac/vim/bundle/
