--- a/Mac/tmux.conf
+++ b/Mac/tmux.conf
@@ -29,18 +29,19 @@ bind -t vi-copy Escape cancel
 bind p paste-buffer
 
 # -----------------------------------------------------------------------------
-# Move to the pane in the desired direction with (prefix [h|j|k|l]). This
-# doesn't override the (prefix o) command
-# -----------------------------------------------------------------------------
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# -----------------------------------------------------------------------------
 # Easier for my brain to remember to split the pane with - and \
 # which resemble a horizontal and vertical split respectively
 # doesn't override default (prefix ") and (prefix &)
 # -----------------------------------------------------------------------------
 bind \ split-window -h
 bind - split-window
+
+# -----------------------------------------------------------------------------
+# Switch between tmux screen splits and Vim splits with the same keys!
+# <C-h><C-j><C-k><C-l>
+# -----------------------------------------------------------------------------
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$|(^|\/)vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$|(^|\/)vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$|(^|\/)vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$|(^|\/)vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$|(^|\/)vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
