--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Ignore all the files and folders in the bundle directory
-Linux/vim/bundle/
-Mac/vim/bundle/
+vim/bundle/
 
 # Ignore Mac
 .DS_Store
