Feature: Tmux leader is now space

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 set -sg escape-time 0
-set -g prefix C-q
+set -g prefix C-Space
 set -g default-terminal "xterm"
 source-file "${HOME}/.tmux/themes/default.tmux"
 
@@ -20,8 +20,10 @@ setw -g mode-keys vi
 setw -g aggressive-resize on
 
 # -----------------------------------------------------------------------------
-# Vim visual selection and yank when in copy mode (prefix [)
+# Vim visual selection and yank when in copy mode
 # -----------------------------------------------------------------------------
+bind Space copy-mode
+bind C-Space copy-mode
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind -t vi-copy Escape cancel
