Tech Debt: Cleaned up OS set up scripts. Removed now unneeded portions

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,11 @@ set -g default-terminal "xterm"
 source-file "${HOME}/.tmux/themes/default.tmux"
 
 # -----------------------------------------------------------------------------
+# Attempt to put an end to the iTerm tmux vim copy nonsense
+# -----------------------------------------------------------------------------
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# -----------------------------------------------------------------------------
 # Turn on window renumbering
 # -----------------------------------------------------------------------------
 set-option -g renumber-windows on
