Feature: Resize tmux panes with the mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,11 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g renumber-windows on
 
 # -----------------------------------------------------------------------------
+# Resize tmux panes with the mouse
+# -----------------------------------------------------------------------------
+set -g mouse-resize-pane on
+
+# -----------------------------------------------------------------------------
 # Turn on Vim mode for movement
 # Also allows easy upwards searching
 # -----------------------------------------------------------------------------
