Feature: Make tmux v1.9+ keep pwd for new tabs/splits

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,8 +50,9 @@ bind p paste-buffer
 # which resemble a horizontal and vertical split respectively
 # doesn't override default (prefix ") and (prefix &)
 # -----------------------------------------------------------------------------
-bind \ split-window -h
-bind - split-window
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # -----------------------------------------------------------------------------
 # Switch between tmux screen splits and Vim splits with the same keys!
