Features: Misc config settings for vim, zsh, and tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,12 @@ bind - split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # -----------------------------------------------------------------------------
+# visual notification of activity in other windows
+# -----------------------------------------------------------------------------
+setw -g monitor-activity on
+set -g visual-activity on
+
+# -----------------------------------------------------------------------------
 # Switch between tmux screen splits and Vim splits with the same keys!
 # <C-h><C-j><C-k><C-l>
 # -----------------------------------------------------------------------------
