Feature: Added Emacs configuration. Don't judge me

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 vim/bundle/
 vim/tmp/
 .DS_Store
+emacs.d/elpa*
+emacs.d/auto-save-list/*
+emacs.d/*~
+emacs.d/ac-comphist.dat
+emacs.d/*ac-comphist.dat*
