--- a/tmux.conf
+++ b/tmux.conf
@@ -64,8 +64,8 @@ set -g visual-activity on
 # Switch between tmux screen splits and Vim splits with the same keys!
 # <C-h><C-j><C-k><C-l>
 # -----------------------------------------------------------------------------
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+is_view_vim_diff="echo '#{pane_current_command}' | grep -iqE '(view|vim)(diff)?'"
+bind -n C-h run "$is_view_vim_diff && tmux send-keys C-h || tmux select-pane -L"
+bind -n C-j run "$is_view_vim_diff && tmux send-keys C-j || tmux select-pane -D"
+bind -n C-k run "$is_view_vim_diff && tmux send-keys C-k || tmux select-pane -U"
+bind -n C-l run "$is_view_vim_diff && tmux send-keys C-l || tmux select-pane -R"
