Enhancement: Tmux now yanks to the system clipboard for OSX

--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -35,7 +35,7 @@ setw -g aggressive-resize on
 bind Space copy-mode
 bind C-Space copy-mode
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind -t vi-copy Escape cancel
 
 # -----------------------------------------------------------------------------
