Feature: Added custom-snips directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ vim/tmp/
 vim/custom-snips/*
 .DS_Store
 custom-configs/*
-!custom-configs/.git-keep.sh
+custom-configs/custom-snips/*
+!custom-configs/custom-snips/.git-keep.sh
 config/configstore/*
 tags
