Enhancement: Now El Capitan, Tumx 2.1 and dein friendly

--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -16,7 +16,8 @@ set-option -g renumber-windows on
 # -----------------------------------------------------------------------------
 # Resize tmux panes with the mouse
 # -----------------------------------------------------------------------------
-set -g mouse-resize-pane on
+set -g mouse on
+bind -T root MouseDrag1Border resize-pane -M
 
 # -----------------------------------------------------------------------------
 # Turn on Vim mode for movement
