Enhancement: No longer need reattach-to-user-namespace

--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -4,11 +4,6 @@ set -g default-terminal "xterm"
 source-file "${HOME}/.tmux/themes/default.tmux"
 
 # -----------------------------------------------------------------------------
-# Attempt to put an end to the iTerm tmux vim copy nonsense
-# -----------------------------------------------------------------------------
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# -----------------------------------------------------------------------------
 # Turn on window renumbering
 # -----------------------------------------------------------------------------
 set-option -g renumber-windows on
@@ -36,7 +31,7 @@ setw -g aggressive-resize on
 bind Space copy-mode
 bind C-Space copy-mode
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe "pbcopy"
 bind -t vi-copy Escape cancel
 
 # -----------------------------------------------------------------------------
