Feature: Vim & Tmux now have 24bit truecolor support
*NOTE* This requires having the latest versions of iTerm2 and Tmux

iTerm2: 3.0.9
Tmux:   2.2

--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -1,7 +1,7 @@
 set -sg escape-time 0
 set -g prefix C-Space
-set -g default-terminal "xterm"
 source-file "${HOME}/.tmux/themes/default.tmux"
+set -g default-terminal "xterm"
 
 # -----------------------------------------------------------------------------
 # Turn on window renumbering
@@ -55,6 +55,11 @@ bind c new-window -c "#{pane_current_path}"
 # -----------------------------------------------------------------------------
 setw -g monitor-activity on
 set -g visual-activity on
+
+# -----------------------------------------------------------------------------
+# Welcome to wonderland
+# -----------------------------------------------------------------------------
+set -ga terminal-overrides ",xterm:Tc"
 
 # -----------------------------------------------------------------------------
 # Switch between tmux screen splits and Vim splits with the same keys!
