--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,30 +1,64 @@
+#  Homebrew setup
+tap "heroku/brew"
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-fonts"
+tap "homebrew/core"
+
 # shell tools
 cask "iterm2"
-brew "tmux"
-brew "zsh"
 brew "zsh-syntax-highlighting"
-
-# vim tools
-brew "vim"
-brew "aspell"
-brew "ctags"
+brew "bat"
+brew "telnet"
+brew "tree"
+brew "gawk"
+brew "direnv"
+brew "gawk"
+brew "speedtest-cli"
+brew "ranger"
+cask "ngrok"
+brew "mackup"
 
 # search tools
-brew "the_silver_searcher"
+brew "ripgrep"
 
 # Source Control Tools
-brew "hub"
-brew "tig"
-
-# keyboard tools
-cask "karabiner-elements"
+brew "git"
+brew "git-standup"
 
 # databases
-cask "postgres"
+# cask "postgres"
+cask "sqlite"
+
+# Java related tools
+cask "java"
+brew "groovy"
+brew "gradle"
+brew "maven"
 
 # languages
 brew "node"
+brew "node@12"
+brew "python@2"
+brew "python3"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "zlib" # needed for pyenv installing
-brew "sqlite"
+
+# Applications
+cask "gitkraken"
+cask "postman"
+cask "dropbox"
+cask "1password"
+cask "visual-studio-code"
+cask "firefox"
+cask "google-chrome"
+cask "slack"
+cask "font-fira-code"
+cask "dbeaver-community"
+cask "shimo"
+cask "jetbrains-toolbox"
+cask "fliqlo"
+
+# App Store apps
+mas "Magnet", id: 441258766
