Update tmux settings for tmux 2.9

--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -46,7 +46,7 @@ bind p paste-buffer
 # which resemble a horizontal and vertical split respectively
 # doesn't override default (prefix ") and (prefix &)
 # -----------------------------------------------------------------------------
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
