--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -4,27 +4,17 @@ brew "tmux"
 brew "zsh"
 brew "zsh-syntax-highlighting"
 
-# vim tools
-brew "vim"
-brew "aspell"
+# vim
+brew "nvim"
 brew "ctags"
 
 # search tools
 brew "the_silver_searcher"
 
-# Source Control Tools
-brew "hub"
-brew "tig"
-
 # keyboard tools
 cask "karabiner-elements"
 
-# databases
-cask "postgres"
 
 # languages
 brew "node"
-brew "pyenv"
-brew "pyenv-virtualenv"
-brew "zlib" # needed for pyenv installing
-brew "sqlite"
+brew "go"
