--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ vim/autoload/
 custom-configs/custom-snips/*
 !custom-configs/custom-snips/.git-keep.sh
 custom-configs/peloton_aws.sh
+custom-configs/peloton_zshrc.sh
 config/configstore/*
 config/direnv/*
 tags
