--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -sg escape-time 0
-set -g prefix C-Space
+# set -g prefix C-Space
 source-file "${HOME}/.tmux/themes/default.tmux"
 set -g default-terminal "xterm"
 
@@ -11,6 +11,7 @@ set-option -g renumber-windows on
 # -----------------------------------------------------------------------------
 # Resize tmux panes with the mouse
 # -----------------------------------------------------------------------------
+setw -g mouse on
 set -g mouse on
 bind -T root MouseDrag1Border resize-pane -M
 
@@ -18,7 +19,7 @@ bind -T root MouseDrag1Border resize-pane -M
 # Turn on Vim mode for movement
 # Also allows easy upwards searching
 # -----------------------------------------------------------------------------
-setw -g mode-keys vi
+# setw -g mode-keys vi
 
 # -----------------------------------------------------------------------------
 # Don't resize the screen when users are in different windows
@@ -28,27 +29,27 @@ setw -g aggressive-resize on
 # -----------------------------------------------------------------------------
 # Vim visual selection and yank when in copy mode
 # -----------------------------------------------------------------------------
-bind Space copy-mode
-bind C-Space copy-mode
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -Tcopy-mode-vi Escape send -X cancel
+# bind Space copy-mode
+# bind C-Space copy-mode
+# bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -Tcopy-mode-vi Escape send -X cancel
 
 # -----------------------------------------------------------------------------
 # After we have something yanked back in Vim we can paste our yanked selection
 # anywhere we are in insert mode with (prefix p). This works in the vim buffer,
 # search and fuzzy finder buffer for example
 # -----------------------------------------------------------------------------
-bind p paste-buffer
+# bind p paste-buffer
 
 # -----------------------------------------------------------------------------
 # Easier for my brain to remember to split the pane with - and \
 # which resemble a horizontal and vertical split respectively
 # doesn't override default (prefix ") and (prefix &)
 # -----------------------------------------------------------------------------
-bind \\ split-window -h -c "#{pane_current_path}"
-bind - split-window -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+# bind \\ split-window -h -c "#{pane_current_path}"
+# bind - split-window -c "#{pane_current_path}"
+# bind c new-window -c "#{pane_current_path}"
 
 # -----------------------------------------------------------------------------
 # visual notification of activity in other windows
@@ -65,8 +66,8 @@ set -ga terminal-overrides ",xterm:Tc"
 # Switch between tmux screen splits and Vim splits with the same keys!
 # <C-h><C-j><C-k><C-l>
 # -----------------------------------------------------------------------------
-is_view_vim_diff="echo '#{pane_current_command}' | grep -iqE '(view|vim)(diff)?'"
-bind -n C-h run "$is_view_vim_diff && tmux send-keys C-h || tmux select-pane -L"
-bind -n C-j run "$is_view_vim_diff && tmux send-keys C-j || tmux select-pane -D"
-bind -n C-k run "$is_view_vim_diff && tmux send-keys C-k || tmux select-pane -U"
-bind -n C-l run "$is_view_vim_diff && tmux send-keys C-l || tmux select-pane -R"
+# is_view_vim_diff="echo '#{pane_current_command}' | grep -iqE '(view|vim)(diff)?'"
+# bind -n C-h run "$is_view_vim_diff && tmux send-keys C-h || tmux select-pane -L"
+# bind -n C-j run "$is_view_vim_diff && tmux send-keys C-j || tmux select-pane -D"
+# bind -n C-k run "$is_view_vim_diff && tmux send-keys C-k || tmux select-pane -U"
+# bind -n C-l run "$is_view_vim_diff && tmux send-keys C-l || tmux select-pane -R"
